--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,21 @@
   color: #61dafb;
 }
 
+.slider {
+  background: green;
+  font-size: 2rem;
+}
+
+.btn {
+  background: black;
+  color: white;
+  padding: 1em 2.5em;
+  border: none;
+  border-radius: 30px;
+  margin: 1em;
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
